Version 1.9.9, in progress
- Fix encoding for Polish translation
- Fix bug: in logging commands entered via the gretl console, options
  were being omitted
- Fix behavior of Ctrl-A in non-editable text windows
- Fix breakage of GUI Alt-x command "minibuffer"
- "modtest" command with --normality option: make the accessors $test
  and $pvalue work when the test is done on a VAR
- Improvements to syntax highlighting in script editor 
- MS Windows build: update cross-compiler to gcc-4.6.3
- Internals: clean up the Minpack sources that we use for nls

2012-03-29 version 1.9.8
- GUI: support use of named lists in the model specification dialog and
  other contexts
- GUI: add option of making the script editor and the model viewer
  windows use tabs
- GUI: add "reformat" option to summary statistics window for single
  series
- GUI: add keyboard shortcut help file
- Add a new practice script illustrating advanced use of mle command,
  and extend the discussion of mle in the User's Guide
- New function pxsum(): computes the cross-sectional sum of a series in
  the context of panel data
- stack() function for panel data: allow '*' in forming list of series
- Compaction of daily to weekly data: enable this even if the daily data
  are not dated
- "panel" command: add --nerlove option to use Nerlove's transformation
  in the context of the random effects estimator
- "system" command: various small fixes and enhancements, including 
  greater computational efficiency
- "pca" command: add --quiet option and parameter to allow specification
  of the number of components to save
- "coint" command: add --verbose option and fix printout of model at
  last step of Engle-Granger test
- "graphpg" command: add "fonstscale" parameter (but also try harder to
  get the default font size right for various gnuplot versions)
- princomp() function: add an optional switch to use the covariance
  matrix
- matrix manipulation: enable use of the boolean operators "&&" and 